Fix flyer text background issues.

--- a/_layouts/flyer.html
+++ b/_layouts/flyer.html
@@ -79,8 +79,9 @@ layout: print
       font-weight: 400;
       letter-spacing: 0.15em;
       text-transform: uppercase;
-      color: rgba(255, 255, 255, 0.9);
+      color: #fff;
       margin-bottom: 0.15in;
+      text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5), -1px -1px 0 rgba(0, 0, 0, 0.5), 1px -1px 0 rgba(0, 0, 0, 0.5), -1px 1px 0 rgba(0, 0, 0, 0.5);
     }
 
     .flyer .title {
@@ -89,7 +90,7 @@ layout: print
       line-height: 1.1;
       max-width: 5.5in;
       color: #fff;
-      text-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+      text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5), -1px -1px 0 rgba(0, 0, 0, 0.5), 1px -1px 0 rgba(0, 0, 0, 0.5), -1px 1px 0 rgba(0, 0, 0, 0.5);
     }
 
     .flyer .footer {
@@ -103,7 +104,7 @@ layout: print
       font-weight: 500;
       line-height: 1.6;
       color: #fff;
-      text-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
+      text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5), -1px -1px 0 rgba(0, 0, 0, 0.5), 1px -1px 0 rgba(0, 0, 0, 0.5), -1px 1px 0 rgba(0, 0, 0, 0.5);
     }
 
     .flyer .details .date {
