--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -281,6 +281,7 @@
       <div class="footer-bottom">
         <div class="footer-legal">
           <p>This independent TEDx event is operated under license from TED.</p>
+          <p><a href="/privacy-policy/">Privacy Policy</a></p>
         </div>
         <div class="footer-social">
           {% if site.social.instagram %}
