--- a/_includes/slides/2026-01-salon-restaurants.html
+++ b/_includes/slides/2026-01-salon-restaurants.html
@@ -101,13 +101,13 @@
   </div>
 </div>
 
-<!-- Slide 3: Bee Tartare - Rootstalk -->
+<!-- Slide 3: Beef Tartare - Rootstalk -->
 <div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/rootstalk/bee-tartare.jpg');"></div>
+  <div class="slide__background" style="background-image: url('/assets/images/restaurants/rootstalk/beef-tartare.jpg');"></div>
   <div class="slide__overlay slide__overlay--restaurant"></div>
   <div class="slide__content">
     <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Bee Tartare</div>
+      <div class="restaurant-info__dish-name">Beef Tartare</div>
       <div class="restaurant-info__restaurant-name">Rootstalk</div>
       <div class="restaurant-info__instagram">
         <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
