--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
           </ul>
         </li>
       </ul>
-      <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-nav-cta&utm_campaign=tedxbreckenridge.com-nav-cta&utm_id=695882751250488eab9018f00a1e63a3" class="nav-cta" target="_blank" rel="noopener noreferrer" aria-label="Get Tickets (opens in new window)">Get Tickets</a>
+      <a href="https://givebutter.com/tedxbreckenridge?utm_source=website&utm_campaign=tedxbreckenridge.com-nav-cta" class="nav-cta" target="_blank" rel="noopener noreferrer" aria-label="Donate (opens in new window)">Donate</a>
     </div>
   </nav>
 
